# Renderer-Prototype

./: CMakeLists.txt
source/: main.cpp  scene.json
source/bvh/: aabb.h  bvh.h
source/camera/: camera.h
source/common/: common.h  interval.h  vecmath.h
source/image/: image.h
source/materials/: material.h  perlin.h  texture.h
source/math/: array2d.h  math.h  transform.h  vecmath.h
source/ray/: ray.h
source/scene/: scene.h
source/surfaces/: constant_medium.h  mesh.h  quad.h  sphere.h  surface.h  surface_list.h  triangle.h
